--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "Code for PDX",
   "license": "ISC",
   "dependencies": {
-    "prop-types": "^15.6.2",
+    "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "react-router": "^3.2.1"
+    "react-redux": "4.4.9",
+    "react-router": "3.2.1",
+    "react-router-redux": "4.0.8",
+    "redux": "3.7.2"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
