added glamorous to project

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Code for PDX",
   "license": "ISC",
   "dependencies": {
+    "glamor": "^2.20.40",
+    "glamorous": "^4.13.1",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
