--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "4.4.9",
     "react-router": "3.2.1",
     "react-router-redux": "4.0.8",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "redux-localstorage": "^0.4.1"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
