--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
+    "lodash": "^4.17.11",
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
