--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Code for PDX",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "lodash": "^4.17.11",
@@ -25,6 +26,7 @@
     "react-router": "3.2.1",
     "react-router-redux": "4.0.8",
     "redux": "3.7.2",
+    "redux-axios-middleware": "^4.0.0",
     "redux-localstorage": "^0.4.1"
   },
   "devDependencies": {
