--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "formik": "^1.4.2",
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "jsonwebtoken": "^8.4.0",
