--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-redux": "4.0.8",
     "redux": "3.7.2",
     "redux-axios-middleware": "^4.0.0",
-    "redux-localstorage": "^0.4.1"
+    "redux-localstorage": "^0.4.1",
+    "yup": "^0.26.7"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
@@ -48,7 +49,7 @@
     "react-hot-loader": "4.3.3",
     "webpack": "4.16.1",
     "webpack-cli": "3.0.8",
-    "webpack-dev-server": "3.1.5"
+    "webpack-dev-server": "^3.1.14"
   },
   "bugs": {
     "url": "https://github.com/codeforpdx/syndromsurveillance/issues"
