--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prop-types": "15.6.2",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-google-maps": "^9.4.5",
     "react-redux": "4.4.9",
     "react-router": "3.2.1",
     "react-router-redux": "4.0.8",
