--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-axios-middleware": "^4.0.0",
     "redux-localstorage": "^0.4.1",
     "styled-components": "^4.2.0",
+    "url-loader": "^2.0.0",
     "yup": "^0.26.7"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "eslint-plugin-react": "7.11.1",
     "html-webpack-plugin": "3.2.0",
     "react-hot-loader": "4.3.3",
+    "react-svg-loader": "^3.0.3",
     "webpack": "4.16.1",
     "webpack-cli": "3.0.8",
     "webpack-dev-server": "^3.1.14"
