--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
+    "favicons-webpack-plugin": "^1.0.2",
     "html-webpack-plugin": "3.2.0",
     "react-hot-loader": "4.3.3",
     "react-svg-loader": "^3.0.3",
